--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <body>
          <h1>Lukman TL</h1>
          <p>Selamat datang di pages sederhana saya</p>
+         <p>XII Rekayasa Perangkat Lunak</p>
+         <p>Banjarsari Kidul</p>
+         <p>@tl_lukman0403</p>
     </body>
 </html>
